--- a/.env
+++ b/.env
@@ -1,9 +1,14 @@
-LIFERAY_URL=https://sepe-hml.df.gov.br:8443
+#CONFIG
+
+LIFERAY_URL=https://slu-hml.df.gov.br:8443
 EMAIL=test@liferay.com
 PASSWORD=Se@20iprev24#
-GROUP_ID=8790738
+GROUP_ID=9602925
 PRIVATE_LAYOUT=False
 OUTPUT_FILE=liferay_urls.csv
-MISSING_URLS_FILE=missing_urls.csv
-EXCEL_FILE=Mapeamento - GDF - SODF.xlsx
+
+# Futuro update
+
+# MISSING_URLS_FILE=missing_urls.csv
+EXCEL_FILE=SLU.xlsx
 SHEET_NAME=Mapeamento
