--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,14 @@
 # Arquivos de ambiente
 .env
 
+#Organize
+old_code/
+ipedf/
+SLU/
+
 # Diretório de cache
 .cache/
-organize/
+
 
 # Arquivos gerados pelo Liferay URL Extractor
 all_liferay_urls.csv
