--- a/.env
+++ b/.env
@@ -1,14 +1,14 @@
 #CONFIG
 
-LIFERAY_URL=https://slu-hml.df.gov.br:8443
+LIFERAY_URL=https://sejus-hml.df.gov.br:8443
 EMAIL=test@liferay.com
 PASSWORD=Se@20iprev24#
-GROUP_ID=9602925
+GROUP_ID=8999020
 PRIVATE_LAYOUT=False
 OUTPUT_FILE=liferay_urls.csv
 
 # Futuro update
 
 # MISSING_URLS_FILE=missing_urls.csv
-EXCEL_FILE=SLU.xlsx
+EXCEL_FILE=SEJUS.xlsx
 SHEET_NAME=Mapeamento
